apps/gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
spec:
  gatewayClassName: istio
  listeners:
    - protocol: HTTP
      port: 80
      name: http
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
