apps/gateway-api/argo-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-http
spec:
  parentRefs:
    - name: gateway
      namespace: default
  hostnames:
    - "argo.localhost"
  rules:
    - backendRefs:
        - name: argocd-server
          namespace: argocd
          port: 80
